# SIIM-ACR-Pneumothorax-Yolo11-Segmentation

./: .gitignore  README.md  pyproject.toml
notebooks/: siim_pneumothorax_visualization.ipynb
src/: __init__.py  dataset_prep.py  dicom_utils.py  paths.py  predict.py  train.py
